# robot-api

./: .babelrc  .codeclimate.yml  .gitignore  .istanbul.yml  .travis.yml  CMakeLists.txt  README.md  bower.json  karma.conf.js  package-lock.json  package.json  package.xml
lib/: action-server.js  base.js  body.js  browser.js  ed-entities.js  ed-misc.js  ed-robocup.js  ed-snapshots.js  ed.js  hardware-properties.js  hardware.js  head.js  index.js  robot.js  speech.js
lib/shims/: eventemitter2.js
test/: action-server.test.js  base.test.js  hardware.test.js  initialization.test.js  require-shim.js  robot.test.js
