<?xml version="1.0"?>
<package>
  <name>robot_api</name>
  <version>0.0.2</version>
  <description>The robot_api package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbridge_suite</build_depend>
  <run_depend>rosbridge_suite</run_depend>
</package>
